Renamed "spacing" control to "edge length", to more accurately reflect the behaviour.

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <output id="output_repulsion"></output>
    </div>
 
-   <div class="onecontrol" style="margin:0;">Spacing:<br/>
+   <div class="onecontrol" style="margin:0;">Edge length:<br/>
     <input type="range" id="input_edgelength" value="10" min="1" max="50" step="1" oninput="setOutputValues();restart();"/>
     <output id="output_edgelength"></output>
    </div>
