Added save as PDF and PNG buttons; included svg2pdf.min.js version 1.5.0 (MIT-licensed).

--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
   </div>
 
   <button class="bigbutton" onClick="addAllLeaves();" style="margin-left:10px; margin-right:20px;">Add all leaves</button>
+  <button class="bigbutton" onClick="savePDF();">Save PDF</button>
+  <button class="bigbutton" onClick="savePNG();">Save PNG</button>
 
  </div> <!-- end of graphControls div -->
 
@@ -269,6 +271,9 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" integrity="sha512-oJp0DdQuQQrRsKVly+Ww6fAN1GwJN7d1bi8UubpEbzDUh84WrJ2CFPBnT4LqBCcfqTcHR5OGXFFhaPe3g1/bzQ==" crossorigin="anonymous"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.js" integrity="sha512-1aNp9qKP+hKU/VJwCtYqJP9tdZWbMDN5pEEXXoXT0pTAxZq1HHZhNBR/dtTNSrHO4U1FsFGGILbqG1O9nl8Mdg==" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/save-svg-as-png/1.4.17/saveSvgAsPng.js" integrity="sha512-eROF+rLuEUiVuYGmMqhsT8/OwSLcVw5RLjhhJrWLTznvDcwG0WtXrV6w7Ko4Nw7LyWzDZOGlQjfzQd7kUYLQcQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js" referrerpolicy="no-referrer"></script>
+ <script src="svg2pdf.min.js"></script>
  <script src="matrixeditor.js"></script>
  <script src="labelregulartrees.js"></script>
 
